Added Rofi keybindings and QoL

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -22,7 +22,7 @@ exec-once = dunst
 exec-once = hyprpaper
 exec-once = blueman-applet # Systray app for BT
 exec-once = nm-applet --indicator # Systray app for Network/Wifi
-exec-once = emacs --daemon
+exec-once = emacs --daemon #Start Emacs server
 exec-once = batsignal -b -f 98
 exec-once = wl-paste -p --watch wl-copy -pc
 
@@ -131,11 +131,14 @@ $mainMod = SUPER
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, alacritty
 bind = $mainMod, Q, killactive, 
-bind = $mainMod, M, exit, 
+bind = SUPER SHIFT, M, exit,
 bind = $mainMod, E, exec, emacsclient -c
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, R, exec, rofi -show drun
-bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, D, exec, rofi -show filebrowser
+bind = $mainMod, S, exec, rofi -show window
+bind = $mainMod, P, exec, rofi -show power-menu -modi power-menu:rofi-power-menu
+# bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, B, exec, librewolf
 
