--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -20,11 +20,13 @@ monitor=,preferred,auto,auto
 exec-once = waybar
 exec-once = dunst
 exec-once = hyprpaper
+exec-once = swayidle -w timeout 300 'swaylock -f -c 000000' timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' before-sleep 'swaylock -f -c 000000'
 exec-once = blueman-applet # Systray app for BT
+exec-once = udiskie --tray # udisks automounting
 exec-once = nm-applet --indicator # Systray app for Network/Wifi
-exec-once = emacs --daemon #Start Emacs server
-exec-once = batsignal -b -f 98
-exec-once = wl-paste -p --watch wl-copy -pc
+exec-once = emacs --daemon # Start Emacs server
+exec-once = wl-paste -p --watch wl-copy -pc # Disable middle click copy
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # Screenshare fix
 
 
 # Source a file (multi-file configs)
@@ -117,11 +119,11 @@ device:epic-mouse-v1 {
 
 # Example windowrule v1
 windowrule = opacity 0.9 override 0.9 override, ^(Emacs)$
-
 windowrule = opacity 0.9 override 0.9 override, ^(dunst)$
 
 # Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+windowrulev2 = float,class:^(LibreWolf)$,title:^(Opening)$
+windowrulev2 = nofullscreenrequest,class:^(LibreWolf)$,title:^(Opening)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
 
