New catpuccin theme. New nvim config based on kickstart. Deleted old doom and alacritty configs

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,6 +1,3 @@
-preload = ~/Documents/Wallpapers/OnePiece.jpg
-
-#set the default wallpaper(s) seen on inital workspace(s) --depending on the number of monitors used
-wallpaper = eDP-1, ~/Documents/Wallpapers/OnePiece.jpg
-
-ipc = off
+preload = ~/Documents/Wallpapers/catppuccin.png
+wallpaper = DP-2,~/Documents/Wallpapers/catppuccin.png
+wallpaper = HDMI-A-1,~/Documents/Wallpapers/catppuccin.png
