--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,174 +1,171 @@
+// Global 
 {
     "layer": "top",
     "position": "top",
-    "mod": "dock",
-    "exclusive": true,
-    "passtrough": false,
-    "gtk-layer-shell": true,
-    "height": 0,
+    "margin": 2,
+
+    // If height property would be not present, it'd be calculated dynamically
+    "height": 30,
+
     "modules-left": [
-        // "cpu",
-        // "memory",
-        // "custom/weather",
-        "custom/arch",
-        "wlr/workspaces",
-        "tray"
+        // "custom/launcher",
+        "hyprland/workspaces",
+        "custom/media",
+        "hyprland/window",
     ],
+ 
     "modules-center": [
-        "hyprland/window"
+        "clock",
     ],
+
     "modules-right": [
-        "custom/toggle-lock",
-        "network",
-        // "custom/updates",
-        // "custom/language",
+        "idle_inhibitor",
+        "cpu",
+        "memory",
+	"temperature",
         "pulseaudio",
-        // "pulseaudio#microphone",
-        // "backlight",
-        "battery",
-        "clock"
+        "pulseaudio#microphone",
+        "network",
+	"tray",
     ],
-    "hyprland/window": {
-        "max-length": 30,
-        "format": "{}"
-    },
-    "wlr/workspaces": {
-        "on-scroll-up": "hyprctl dispatch workspace e+1",
-        "on-scroll-down": "hyprctl dispatch workspace e-1",
-        "all-outputs": true,
-        "on-click": "activate",
-        "format": "{icon}",
-        "format-icons": {
-            "1": "",
-            "2": "",
-            "3": "",
-            "4": "",
-            "5": "",
-            "urgent": "",
-            "active": "",
-            "default": ""
+
+    // Modules
+
+    "idle_inhibitor": {
+        "format": "{icon} ",
+        "format-icons":{
+            "activated": "",
+            "deactivated": ""
         }
     },
-    "cpu": {
-        "interval": 10,
-        "format": "󰍛 {usage}%",
-        "format-alt": "{icon0}{icon1}{icon2}{icon3}",
-        "format-icons": [
-            "▁",
-            "▂",
-            "▃",
-            "▄",
-            "▅",
-            "▆",
-            "▇",
-            "█"
-        ]
-    },
-    "memory": {
-        "interval": 30,
-        "format": "󰾆 {percentage}%",
-        "format-alt": "󰾅 {used}GB",
-        "max-length": 10,
-        "tooltip": true,
-        "tooltip-format": " {used:0.1f}GB/{total:0.1f}GB"
-    },
-    "custom/updates": {
-        "exec": "(paru -Qua) | wc -l",
-        "interval": 7200,
-        "format": " {}"
-    },
-    // "custom/language": {
-    //     "exec": "cat /tmp/kb_layout",
-    //     "interval": 3,
-    //     "format": " {}",
-    //     "tooltip": false
-    // },
-    "custom/weather": {
-        "tooltip": true,
-        "format": "{}",
-        "restart-interval": 300,
-        "exec": "~/.config/waybar/scripts/waybar-wttr.py",
-        "return-type": "json"
-    },
-    "tray": {
-        "icon-size": 13,
-        "tooltip": true,
-        "spacing": 10
-    },
+
     "clock": {
-        "format": "{: %d/%m |  %R}",
-        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
+        "interval": 10,
+        // "format-alt": " {:%e %b %Y}", // Icon: calendar-alt
+        "format": "{:%e %b %Y %H:%M} ",
+        "tooltip-format": "{:%e %B %Y}"
     },
-    "pulseaudio": {
-        "format": "{icon} {volume}%",
-        "tooltip": false,
-        "format-muted": " Muted",
-        "on-click": "pamixer -t",
-        "on-scroll-up": "pamixer -i 5",
-        "on-scroll-down": "pamixer -d 5",
-        "scroll-step": 5,
+
+    "cpu": {
+        "interval": 5,
+        "format": "  {usage}%", // Icon: microchip
+        "states": {
+            "warning": 70,
+            "critical": 90,
+        },
+        "on-click": "kitty -e 'btm'",
+    },
+
+    "temperature": {
+	"interval": 5,
+	"format": "  {temperatureC}°C", // Icon: temperature-low
+	"on-click": "kitty -e 'sensors'",
+	"states": {
+	    "warning": 70,
+	    "critical": 90
+	},
+	"hwmon-path": "/sys/class/hwmon/hwmon0/temp1_input",
+    },
+
+    "memory": {
+        "interval": 5,
+        "format": "  {}%", // Icon: memory
+        "on-click": "kitty -e 'btm'", 
+        "states": {
+            "warning": 70,
+            "critical": 90
+        }
+    },
+
+    "network": {
+        "interval": 5,
+        "format-wifi": "  ", // Icon: wifi
+        "format-ethernet": " 󰈀 ", // Icon: ethernet
+        "format-disconnected": "⚠  Disconnected",
+        "tooltip-format": "{ifname}: {ipaddr}",
+        "on-click": "kitty -e 'nmtui'",
+    },
+
+    "hyprland/mode": {
+        "format": "{}",
+        "tooltip": false
+    },
+
+    "hyprland/window": {
+        "format": "{}",
+        "max-length": 120
+    },
+
+    "hyprland/workspaces": {
+        "disable-scroll": true,
+        "disable-markup" : false,
+        "all-outputs": true,
+        "format": "  {icon}  ",
+        //"format":"{icon}",
         "format-icons": {
-            "headphone": "",
-            "hands-free": "",
-            "headset": "",
+            "1": "󰙯",
+            "2": "",
+            "3": "",
+            "4": "",
+	    "5": "󰓓",
+	    "6": "",
+        }
+    },
+
+    "pulseaudio": {
+        "scroll-step": 1, // %, can be a float
+        "format": "{icon} {volume}%",
+        "format-bluetooth": "{volume}% {icon}  {format_source}",
+        "format-bluetooth-muted": " {icon}  {format_source}",
+        "format-muted": "󰸈",
+        "format-icons": {
+            "headphone": "󰋋",
+            "hands-free": "וֹ",
+            "headset": " 󰋋 ",
             "phone": "",
             "portable": "",
             "car": "",
-            "default": [
-                "",
-                "",
-                ""
-            ]
-        }
+            "default": [""]
+        },
+        "on-click": "pactl set-sink-mute @DEFAULT_SINK@ toggle",
+        "on-click-right": "pavucontrol",
+        "on-scroll-up": "pactl set-sink-volume @DEFAULT_SINK@ +2%",
+        "on-scroll-down": "pactl set-sink-volume @DEFAULT_SINK@ -2%",
     },
+
     "pulseaudio#microphone": {
         "format": "{format_source}",
-        "tooltip": false,
-        "format-source": " {volume}%",
-        "format-source-muted": " Muted",
+        "format-source": " {volume}%",
+        "format-source-muted": " ",
         "on-click": "pamixer --default-source -t",
+        "on-click-right": "pavucontrol",
         "on-scroll-up": "pamixer --default-source -i 5",
         "on-scroll-down": "pamixer --default-source -d 5",
         "scroll-step": 5
     },
-    "network": {
-        // "interface": "wlp2*", // (Optional) To force the use of this interface
-        "format-wifi": "󰤨 {essid}",
-        "format-ethernet": "󱘖 Wired",
-        "tooltip-format": "󱘖 {ipaddr}  {bandwidthUpBytes}  {bandwidthDownBytes}",
-        "format-linked": "󱘖 {ifname} (No IP)",
-        "format-disconnected": " Disconnected",
-        "format-alt": "󰤨 {signalStrength}%",
-        "interval": 5,
-        "max-length": 10
-    },
-    "battery": {
-        "bat": "BAT0",
-        "interval": 30,
-        "states": {
-            "warning": 30,
-            "critical": 15
-        },
-        "format": "<b>{icon} {capacity}%</b>",
-        "format-charging": "<b>⚡ {icon} {capacity}%</b>",
-        "format-icons": [
-            " ",
-            " ",
-            " ",
-            " "
-        ],
-        "max-length": 25,
-        "tooltip": false
-    },
-    "custom/arch": {
-        "format": " {}",
-    },
-    "custom/toggle-lock": {
-        "exec": "~/.config/waybar/scripts/lock-status.sh",
-        "exec-on-event": true,
-        "on-click": "~/.config/waybar/scripts/toggle-lock.sh",
+
+    // to use the weather module replace <your_location> with your city or town
+    // note: do not use spaces: new york would be newyork
+    "custom/weather": {
+        "exec": "~/.config/waybar/scripts/weather.sh tampa", 
         "return-type": "json",
-        "tooltip": "Toggle lock",
-        "interval": 1,
+        "interval": 600,
+    },
+
+    "tray": {
+        "icon-size": 18,
+        "spacing":10,
+     },
+
+    "custom/media": {
+        "format": "{icon} {}",
+        "return-type": "json",
+        "max-length": 40,
+        "format-icons": {
+            "spotify": "",
+            "default": "󰗃"
+        },
+        "escape": true,
+        "exec": "/usr/bin/python3 $HOME/.config/waybar/scripts/mediaplayer.py 2> /dev/null" // Script in resources folder
     }
 }
