--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -3,8 +3,9 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=HDMI-A-1,highrr,0x0,auto,vrr,1
-monitor=DP-2,preferred,-1600x200,auto
+# monitor=HDMI-A-1,highrr,1600x0,auto,vrr,2
+monitor=HDMI-A-1,highrr,1600x0,auto
+monitor=DP-2,preferred,0x200,auto
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -13,20 +14,15 @@ exec-once = waybar &
 exec-once = hyprpaper &
 exec-once = dunst &
 exec-once = wljoywake -t 600 &
-exec-once = xwaylandvideobridge &
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 &
-exec-once = /usr/lib/kdeconnectd &
-exec-once = xrander --output HDMI-A-1 --primary
+# exec-once = /usr/lib/kdeconnectd &
+# exec-once = xrander --output HDMI-A-1 --primary
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = hyprctl setcursor Qogir 14
 
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-
-# Lock screen
-exec-once = swayidle -w
-
 
 #environment-variables
 env = CLUTTER_BACKEND,wayland
@@ -46,9 +42,6 @@ $terminal = kitty
 $fileManager = dolphin
 $menu = rofi -show drun -show-icons
 
-# Some default env vars.
-env = XCURSOR_SIZE,24
-
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = latam
@@ -57,7 +50,7 @@ input {
     kb_options =
     kb_rules =
 
-    follow_mouse = 1
+    follow_mouse = 0
     mouse_refocus = false
 
     touchpad {
@@ -124,7 +117,8 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = false
+    new_status = slave 
+    #new_is_master = no
 }
 
 gestures {
@@ -134,28 +128,35 @@ gestures {
 
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    force_default_wallpaper = -1 # Set to 0 to disable the anime mascot wallpapers
+    force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
 }
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic-mouse-v1 {
-    sensitivity = -0.5
-}
+# device:epic-mouse-v1 {
+#     sensitivity = -0.5
+# }
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
-windowrulev2 = float,class:(transmission-gtk),title:(Torrent Options)
+# windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
+windowrulev2 = float,class:^(transmission-gtk)$,title:^(Torrent Options)$
 windowrulev2 = float,class:^(LibreWolf)$,title:^(Bitwarden)$
 windowrulev2 = float, class: ^(org.kde.polkit-kde-authentication-agent-1)$
 windowrulev2 = float, title: ^(Bluetooth)$
 windowrulev2 = float, title: ^(Steam Settings)$
 windowrulev2 = float, title: ^(Friends List)$
 windowrulev2 = float, title: ^(Volume Control)$
+
+# windowrule=float,^(.*.exe)$
+# windowrule=float,^(steam_app_.*)$
+# windowrule=float,^(steam_proton)$
+# windowrulev2=float,class:^(gamescope)$
+# windowrulev2=fullscreen,class:^(gamescope)$
+
 windowrulev2 = float, class: ^(org.kde.kdeconnect.handler)$
 windowrulev2 = workspace 1, class: ^(discord)$
 # windowrulev2 = workspace 2, class: ^(kitty)$
@@ -164,11 +165,8 @@ windowrulev2 = workspace 4, class: ^(Spotify)$
 windowrulev2 = workspace 5, class: ^(steam)$
 windowrulev2 = workspace 6, class: ^(whatsapp-for-linux)$
 
-# Video bridge
-windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
-windowrulev2 = noanim,class:^(xwaylandvideobridge)$
-windowrulev2 = nofocus,class:^(xwaylandvideobridge)$
-windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
+# TODO : fix this rule
+# windowrulev2 = stayfocused,class:(steam),title:(^$)
 
 # Workspace rules
 workspace = 1, monitor:DP-2
