--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = ~/Documents/Wallpapers/catppuccin.png
-wallpaper = DP-2,~/Documents/Wallpapers/catppuccin.png
-wallpaper = HDMI-A-1,~/Documents/Wallpapers/catppuccin.png
+preload = ~/Documents/Wallpapers/spooky_spill.jpg
+wallpaper = DP-2,~/Documents/Wallpapers/spooky_spill.jpg
+wallpaper = HDMI-A-1,~/Documents/Wallpapers/spooky_spill.jpg
