--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -3,9 +3,9 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-# monitor=HDMI-A-1,highrr,1600x0,auto,vrr,2
-monitor=HDMI-A-1,highrr,1600x0,auto
-monitor=DP-2,preferred,0x200,auto
+# monitor=auto,preferred,0x0,auto
+monitor=HDMI-A-1,highrr,1600x0,auto, vrr, 2
+monitor=DP-1,preferred,0x200,auto
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -36,6 +36,13 @@ env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XCURSOR_SIZE,24
+env = LIBVA_DRIVER_NAME,nvidia
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+
+cursor {
+    no_hardware_cursors = true
+}
 
 # Set programs that you use
 $terminal = kitty
@@ -163,19 +170,20 @@ windowrulev2 = workspace 1, class: ^(discord)$
 windowrulev2 = workspace 3, class: ^(LibreWolf)$
 windowrulev2 = workspace 4, class: ^(Spotify)$
 windowrulev2 = workspace 5, class: ^(steam)$
+windowrulev2 = nofocus,class:^(steam)$,title:^(notificationtoasts_.*_desktop)$
 windowrulev2 = workspace 6, class: ^(whatsapp-for-linux)$
 
 # TODO : fix this rule
 # windowrulev2 = stayfocused,class:(steam),title:(^$)
 
 # Workspace rules
-workspace = 1, monitor:DP-2
+workspace = 1, monitor:DP-1
 workspace = 2, monitor:HDMI-A-1
 workspace = 3, monitor:HDMI-A-1
-workspace = 4, monitor:DP-2
+workspace = 4, monitor:DP-1
 workspace = 5, monitor:HDMI-A-1
 workspace = 6, monitor:HDMI-A-1
-workspace = 7, monitor:DP-2
+workspace = 7, monitor:DP-1
 workspace = 8, monitor:HDMI-A-1
 workspace = 9, monitor:HDMI-A-1
 
@@ -197,6 +205,7 @@ bind = $mainMod, S, exec, steam
 bind = $mainMod, H, exec, heroic
 bind = $mainMod, C, exec, whatsapp-for-linux
 bind = $mainMod, W, exec, rofi -show window -show-icons
+bind = $mainMod, A, exec, thunar
 
 # Fullscreen
 bind = $mainMod, F, fullscreen, 1
