nvim update new plugins jukit for ipython repl, venv-selector, kitty navigation, changed copilots keybinds and more

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1352,7 +1352,7 @@ shell /usr/bin/fish
 #: See rc_custom_auth <https://sw.kovidgoyal.net/kitty/remote-
 #: control/#rc-custom-auth> for details.
 
-# allow_remote_control no
+allow_remote_control yes
 
 #: Allow other programs to control kitty. If you turn this on, other
 #: programs can control all aspects of kitty, including sending text
@@ -1381,7 +1381,7 @@ shell /usr/bin/fish
 #: yes
 #:     Remote control requests are always accepted.
 
-# listen_on none
+listen_on unix:@mykitty
 
 #: Listen to the specified socket for remote control connections. Note
 #: that this will apply to all kitty instances. It can be overridden
@@ -2447,6 +2447,12 @@ shell /usr/bin/fish
 #: Quit kitty
 
 # map cmd+q quit
+
+#: Kitty nvim-navigation
+map ctrl+e kitten pass_keys.py neighboring_window bottom ctrl+e
+map ctrl+i kitten pass_keys.py neighboring_window top    ctrl+i
+map ctrl+n kitten pass_keys.py neighboring_window left   ctrl+n
+map ctrl+o kitten pass_keys.py neighboring_window right  ctrl+o
 
 #: }}}
 
