New plugints for lsp, hyprbar steam fixes, and more

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -158,19 +158,11 @@ windowrulev2 = float, title: ^(Steam Settings)$
 windowrulev2 = float, title: ^(Friends List)$
 windowrulev2 = float, title: ^(Volume Control)$
 
-# windowrule=float,^(.*.exe)$
-# windowrule=float,^(steam_app_.*)$
-# windowrule=float,^(steam_proton)$
-# windowrulev2=float,class:^(gamescope)$
-# windowrulev2=fullscreen,class:^(gamescope)$
-
 windowrulev2 = float, class: ^(org.kde.kdeconnect.handler)$
 windowrulev2 = workspace 1, class: ^(discord)$
-# windowrulev2 = workspace 2, class: ^(kitty)$
 windowrulev2 = workspace 3, class: ^(LibreWolf)$
 windowrulev2 = workspace 4, class: ^(Spotify)$
-windowrulev2 = workspace 5, class: ^(steam)$
-windowrulev2 = nofocus,class:^(steam)$,title:^(notificationtoasts_.*_desktop)$
+windowrulev2 = workspace 5 silent, class: ^(steam)$
 windowrulev2 = workspace 6, class: ^(whatsapp-for-linux)$
 
 # TODO : fix this rule
