Replaced discord for vesktop (Screenshare + audio fix) and open neogit in new window

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -160,6 +160,7 @@ windowrulev2 = float, title: ^(Volume Control)$
 
 windowrulev2 = float, class: ^(org.kde.kdeconnect.handler)$
 windowrulev2 = workspace 1, class: ^(discord)$
+windowrulev2 = workspace 1, class: ^(vesktop)$
 windowrulev2 = workspace 3, class: ^(LibreWolf)$
 windowrulev2 = workspace 4, class: ^(Spotify)$
 windowrulev2 = workspace 5 silent, class: ^(steam)$
@@ -192,7 +193,8 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, B, exec, librewolf
-bind = $mainMod, D, exec, discord
+bind = $mainMod SHIFT, D, exec, discord
+bind = $mainMod, D, exec, vesktop
 bind = $mainMod, S, exec, steam
 bind = $mainMod, H, exec, heroic
 bind = $mainMod, C, exec, whatsapp-for-linux
