End of year repo sync

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -4,7 +4,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # monitor=auto,preferred,0x0,auto
-monitor=HDMI-A-1,highrr,1600x0,auto, vrr, 2
+monitor=HDMI-A-1,1920x1080@120,1600x0,auto, vrr, 2
 monitor=DP-1,preferred,0x200,auto
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -94,11 +94,11 @@ decoration {
         size = 3
         passes = 1
     }
-
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+#    TODO: Check syntax
+#     drop_shadow = yes
+#     shadow_range = 4
+#     shadow_render_power = 3
+#     col.shadow = rgba(1a1a1aee)
 }
 
 animations {
@@ -150,8 +150,8 @@ misc {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
-windowrulev2 = float,class:^(transmission-gtk)$,title:^(Torrent Options)$
-windowrulev2 = float,class:^(LibreWolf)$,title:^(Bitwarden)$
+windowrulev2 = float, class: ^(transmission-gtk)$,title:^(Torrent Options)$
+windowrulev2 = float, class: ^(LibreWolf)$,title:^(Bitwarden)$
 windowrulev2 = float, class: ^(org.kde.polkit-kde-authentication-agent-1)$
 windowrulev2 = float, title: ^(Bluetooth)$
 windowrulev2 = float, title: ^(Steam Settings)$
@@ -164,7 +164,7 @@ windowrulev2 = workspace 1, class: ^(vesktop)$
 windowrulev2 = workspace 3, class: ^(LibreWolf)$
 windowrulev2 = workspace 4, class: ^(Spotify)$
 windowrulev2 = workspace 5 silent, class: ^(steam)$
-windowrulev2 = workspace 6, class: ^(whatsapp-for-linux)$
+windowrulev2 = workspace 6, class: ^(wasistlos)$
 
 # TODO : fix this rule
 # windowrulev2 = stayfocused,class:(steam),title:(^$)
@@ -186,8 +186,8 @@ $mainMod = SUPER
 # Shortcuts
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, T, exec, $terminal
-bind = $mainMod, P, exec, neovide
-bind = $mainMod, M, exec, spotify 
+bind = $mainMod, G, exec, $terminal nvim
+bind = $mainMod, P, exec, spotify 
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
@@ -197,7 +197,7 @@ bind = $mainMod SHIFT, D, exec, discord
 bind = $mainMod, D, exec, vesktop
 bind = $mainMod, S, exec, steam
 bind = $mainMod, H, exec, heroic
-bind = $mainMod, C, exec, whatsapp-for-linux
+bind = $mainMod, C, exec, wasistlos
 bind = $mainMod, W, exec, rofi -show window -show-icons
 bind = $mainMod, A, exec, thunar
 
