New rofi theme, hyprland and neovim changes

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -10,13 +10,11 @@ monitor=DP-1,preferred,0x200,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar &
+exec-once = hyprpanel &
 exec-once = hyprpaper &
-exec-once = dunst &
-exec-once = wljoywake -t 600 &
+# exec-once = wljoywake -t 600 &
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 &
 # exec-once = /usr/lib/kdeconnectd &
-# exec-once = xrander --output HDMI-A-1 --primary
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = hyprctl setcursor Qogir 14
@@ -39,6 +37,7 @@ env = XCURSOR_SIZE,24
 env = LIBVA_DRIVER_NAME,nvidia
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = NVD_BACKEND,direct
 
 cursor {
     no_hardware_cursors = true
@@ -81,7 +80,7 @@ general {
     layout = master
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
+    allow_tearing = true
 }
 
 decoration {
@@ -94,11 +93,6 @@ decoration {
         size = 3
         passes = 1
     }
-#    TODO: Check syntax
-#     drop_shadow = yes
-#     shadow_range = 4
-#     shadow_render_power = 3
-#     col.shadow = rgba(1a1a1aee)
 }
 
 animations {
@@ -165,9 +159,6 @@ windowrulev2 = workspace 3, class: ^(LibreWolf)$
 windowrulev2 = workspace 4, class: ^(Spotify)$
 windowrulev2 = workspace 5 silent, class: ^(steam)$
 windowrulev2 = workspace 6, class: ^(wasistlos)$
-
-# TODO : fix this rule
-# windowrulev2 = stayfocused,class:(steam),title:(^$)
 
 # Workspace rules
 workspace = 1, monitor:DP-1
