--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2460,6 +2460,6 @@ map ctrl+o kitten pass_keys.py neighboring_window right  ctrl+o
 
 
 # BEGIN_KITTY_THEME
-# Catppuccin-Mocha
+# Kanagawa_dragon
 include current-theme.conf
 # END_KITTY_THEME
