Changes before os reinstall

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -4,8 +4,8 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # monitor=auto,preferred,0x0,auto
-monitor=HDMI-A-1,1920x1080@120,1600x0,auto, vrr, 2
-monitor=DP-1,preferred,0x200,auto
+monitor=HDMI-A-1,highrr,900x100,auto, vrr, 2
+monitor=DP-1,preferred,0x0,auto, transform, 3
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -119,7 +119,6 @@ dwindle {
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
     new_status = slave 
-    #new_is_master = no
 }
 
 gestures {
@@ -130,6 +129,11 @@ gestures {
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
+}
+
+ecosystem {
+    no_donation_nag = true
+    no_update_news = true
 }
 
 # Example per-device config
@@ -155,19 +159,19 @@ windowrulev2 = float, title: ^(Volume Control)$
 windowrulev2 = float, class: ^(org.kde.kdeconnect.handler)$
 windowrulev2 = workspace 1, class: ^(discord)$
 windowrulev2 = workspace 1, class: ^(vesktop)$
-windowrulev2 = workspace 3, class: ^(LibreWolf)$
+windowrulev2 = workspace 3, class: ^(librewolf)$
 windowrulev2 = workspace 4, class: ^(Spotify)$
 windowrulev2 = workspace 5 silent, class: ^(steam)$
 windowrulev2 = workspace 6, class: ^(wasistlos)$
 
 # Workspace rules
-workspace = 1, monitor:DP-1
+workspace = 1, monitor:DP-1, layoutopt:orientation:top
 workspace = 2, monitor:HDMI-A-1
 workspace = 3, monitor:HDMI-A-1
-workspace = 4, monitor:DP-1
+workspace = 4, monitor:DP-1, layoutopt:orientation:top
 workspace = 5, monitor:HDMI-A-1
 workspace = 6, monitor:HDMI-A-1
-workspace = 7, monitor:DP-1
+workspace = 7, monitor:DP-1, layoutopt:orientation:top
 workspace = 8, monitor:HDMI-A-1
 workspace = 9, monitor:HDMI-A-1
 
@@ -176,13 +180,12 @@ $mainMod = SUPER
 
 # Shortcuts
 bind = $mainMod, Q, killactive, 
+bind = SHIFT+$mainMod, Q, exec, hyprctl kill
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, G, exec, $terminal nvim
 bind = $mainMod, P, exec, spotify 
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, B, exec, librewolf
 bind = $mainMod SHIFT, D, exec, discord
 bind = $mainMod, D, exec, vesktop
